--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 The goal is to translate the manual from http://tilemill.com/manual.html in French
 
+Use Showdown to get an overview of the result http://softwaremaniacs.org/playground/showdown-highlight/
+
